--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -459,7 +459,7 @@ name='new wallpaper'
 
 [org/gnome/shell]
 always-show-log-out=true
-app-picker-layout=[{'Utilities': <{'position': <0>}>, 'org.gnome.Nautilus.desktop': <{'position': <1>}>, 'cachyos-pi.desktop': <{'position': <2>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <3>}>, 'lstopo.desktop': <{'position': <4>}>, 'org.gnome.Meld.desktop': <{'position': <5>}>, '4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <6>}>, 'org.gnome.Extensions.desktop': <{'position': <7>}>, 'webcord.desktop': <{'position': <8>}>, 'logseq-desktop.desktop': <{'position': <9>}>, 'org.gnome.Settings.desktop': <{'position': <10>}>, 'org.gnome.Usage.desktop': <{'position': <11>}>, 'org.gnome.PowerStats.desktop': <{'position': <12>}>, 'org.gnome.tweaks.desktop': <{'position': <13>}>}]
+app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'org.gnome.Nautilus.desktop': <{'position': <1>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <2>}>, 'org.gnome.Extensions.desktop': <{'position': <3>}>, 'lstopo.desktop': <{'position': <4>}>, 'webcord.desktop': <{'position': <5>}>, 'org.gnome.Meld.desktop': <{'position': <6>}>, 'gnome-nettool.desktop': <{'position': <7>}>, 'logseq-desktop.desktop': <{'position': <8>}>, 'org.gnome.Settings.desktop': <{'position': <9>}>, 'org.gnome.Usage.desktop': <{'position': <10>}>, 'org.gnome.PowerStats.desktop': <{'position': <11>}>, 'org.gnome.tweaks.desktop': <{'position': <12>}>}]
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
