--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -17,7 +17,7 @@ volume=1.0
 
 [com/rafaelmardojai/Blanket/e52f7134-cff9-463b-9f7d-3740d2cc1d57]
 sounds-mute={'rain': false, 'storm': false, 'wind': false, 'waves': false, 'stream': false, 'birds': false, 'summer-night': false, 'train': false, 'white-noise': false, 'pink-noise': false, 'fireplace': false, 'coffee-shop': false, 'city': false, 'boat': false}
-sounds-volume={'rain': 0.0, 'storm': 0.0, 'wind': 0.0, 'waves': 0.0, 'stream': 0.0, 'birds': 0.0, 'summer-night': 0.0, 'train': 0.0, 'white-noise': 0.0, 'pink-noise': 0.0, 'fireplace': 0.0, 'coffee-shop': 0.0, 'city': 0.0, 'boat': 0.0}
+sounds-volume={'rain': 0.080000000000000002, 'storm': 0.040000000000000001, 'wind': 0.040000000000000001, 'waves': 0.050000000000000003, 'stream': 0.0, 'birds': 0.029999999999999999, 'summer-night': 0.0, 'train': 0.0, 'white-noise': 0.0, 'pink-noise': 0.0, 'fireplace': 0.0, 'coffee-shop': 0.0, 'city': 0.0, 'boat': 0.0}
 
 [io/bassi/Amberol]
 background-play=false
@@ -64,7 +64,7 @@ mag-factor=1.0
 folder-children=['YaST', '4f30ef93-ae2e-4d81-8628-5dd4255b7b9e']
 
 [org/gnome/desktop/app-folders/folders/4f30ef93-ae2e-4d81-8628-5dd4255b7b9e]
-apps=['qvidcap.desktop', 'qv4l2.desktop', 'mpv.desktop', 'org.pwmt.zathura.desktop', 'firewall-config.desktop', 'xterm.desktop', 'conky.desktop', 'nnn.desktop', 'uxterm.desktop', 'avahi-discover.desktop', 'bvnc.desktop', 'bssh.desktop', 'nvim.desktop']
+apps=['qvidcap.desktop', 'qv4l2.desktop', 'mpv.desktop', 'org.pwmt.zathura.desktop', 'firewall-config.desktop', 'xterm.desktop', 'conky.desktop', 'nnn.desktop', 'uxterm.desktop', 'avahi-discover.desktop', 'bvnc.desktop', 'bssh.desktop', 'nvim.desktop', 'org.gnome.Extensions.desktop']
 name='not GUI'
 translate=false
 
@@ -120,11 +120,11 @@ enable-animations=true
 enable-hot-corners=false
 font-antialiasing='grayscale'
 font-hinting='slight'
-font-name='IBM Plex Sans 10'
+font-name='Sans 10'
 gtk-enable-primary-paste=false
 gtk-key-theme='Emacs'
 gtk-theme='Gruvbox-Dark-BL-MOD'
-icon-theme='Gruvbox_Cursors_Dark'
+icon-theme='Gruvbox-plus-icon-MOD'
 monospace-font-name='FiraCode Nerd Font Mono 10'
 show-battery-percentage=false
 text-scaling-factor=1.0
@@ -449,22 +449,22 @@ name='tty-clock'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7]
 binding='<Control><Super>p'
-command='kitty -1 -e pipes'
+command='kitty -1 -e pipes.sh'
 name='pipes'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8]
-binding='<Shift><Super>m'
-command='/usr/bin/wallpaper'
-name='new wallpaper'
+binding=''
+command='fastfetch --kitty ~/pictures/patrick-bateman-pfp.jpg'
+name='neofetch'
 
 [org/gnome/shell]
 always-show-log-out=true
-app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'org.gnome.Nautilus.desktop': <{'position': <1>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <2>}>, 'org.gnome.Extensions.desktop': <{'position': <3>}>, 'lstopo.desktop': <{'position': <4>}>, 'webcord.desktop': <{'position': <5>}>, 'org.gnome.Meld.desktop': <{'position': <6>}>, 'gnome-nettool.desktop': <{'position': <7>}>, 'logseq-desktop.desktop': <{'position': <8>}>, 'org.gnome.Settings.desktop': <{'position': <9>}>, 'org.gnome.Usage.desktop': <{'position': <10>}>, 'org.gnome.PowerStats.desktop': <{'position': <11>}>, 'org.gnome.tweaks.desktop': <{'position': <12>}>}]
+app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'org.gnome.Nautilus.desktop': <{'position': <1>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <2>}>, 'lstopo.desktop': <{'position': <3>}>, 'webcord.desktop': <{'position': <4>}>, 'org.gnome.Meld.desktop': <{'position': <5>}>, 'gnome-nettool.desktop': <{'position': <6>}>, 'logseq-desktop.desktop': <{'position': <7>}>, 'org.gnome.Settings.desktop': <{'position': <8>}>, 'org.gnome.Usage.desktop': <{'position': <9>}>, 'org.gnome.PowerStats.desktop': <{'position': <10>}>, 'org.gnome.tweaks.desktop': <{'position': <11>}>}]
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com']
 favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
@@ -1131,7 +1131,7 @@ show-type-column=true
 sidebar-width=140
 sort-column='name'
 sort-directories-first=false
-sort-order='ascending'
+sort-order='descending'
 type-format='category'
 view-type='list'
 window-size=(1151, 656)
@@ -1150,5 +1150,5 @@ sort-column='name'
 sort-directories-first=false
 sort-order='descending'
 type-format='category'
-window-position=(1899, 322)
+window-position=(104, 104)
 window-size=(1115, 708)
