--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -453,7 +453,7 @@ command='kitty -1 -e pipes.sh'
 name='pipes'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8]
-binding=''
+binding='<Control><Super>f'
 command='fastfetch --kitty ~/pictures/patrick-bateman-pfp.jpg'
 name='neofetch'
 
