--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -444,17 +444,17 @@ name='newsboat'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6]
 binding='<Control><Super>u'
-command='kitty -1 -e tty-clock -c -C 3 -r -s -f "%B, %d"'
+command='kitty -1 -e tty-clock -c -C 3 -r -s -f "%A, %B, %d"'
 name='tty-clock'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7]
 binding='<Control><Super>p'
-command='kitty -1 -e pipes.sh'
+command='kitty -1 --hold -e pipes.sh'
 name='pipes'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8]
 binding='<Control><Super>f'
-command='fastfetch --kitty ~/pictures/patrick-bateman-pfp.jpg'
+command='kitty -1 --hold -e neofetch --kitty /home/twilight/pictures/patrick-bateman-pfp.jpg'
 name='neofetch'
 
 [org/gnome/shell]
@@ -1067,7 +1067,7 @@ name='Gruvbox-Dark-BL-MOD'
 fixed-widths=false
 hide-icons=false
 hide-zeros=true
-hot-sensors=['_memory_usage_', '_system_load_1m_', '__network-rx_max__', '_processor_core_0_']
+hot-sensors=['_memory_usage_', '_system_load_1m_', '_processor_core_0_', '__network-rx_max__']
 position-in-panel=2
 show-battery=true
 show-temperature=true
