--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -11,13 +11,13 @@ last-used-version='0.4.0'
 style-variant='use-default'
 
 [com/rafaelmardojai/Blanket]
-playing=true
-scroll-position=0.0
+playing=false
+scroll-position=212.31609994054119
 volume=1.0
 
 [com/rafaelmardojai/Blanket/e52f7134-cff9-463b-9f7d-3740d2cc1d57]
-sounds-mute={'rain': false, 'storm': false, 'wind': false, 'waves': false, 'stream': false, 'birds': false, 'summer-night': false, 'train': false, 'white-noise': false, 'pink-noise': false, 'fireplace': false, 'coffee-shop': false, 'city': false, 'boat': false}
-sounds-volume={'rain': 0.080000000000000002, 'storm': 0.040000000000000001, 'wind': 0.040000000000000001, 'waves': 0.050000000000000003, 'stream': 0.0, 'birds': 0.029999999999999999, 'summer-night': 0.0, 'train': 0.0, 'white-noise': 0.0, 'pink-noise': 0.0, 'fireplace': 0.0, 'coffee-shop': 0.0, 'city': 0.0, 'boat': 0.0}
+sounds-mute={'rain': false, 'storm': false, 'wind': true, 'waves': false, 'stream': false, 'birds': false, 'summer-night': false, 'train': false, 'white-noise': false, 'pink-noise': false, 'fireplace': false, 'coffee-shop': false, 'city': false, 'boat': false}
+sounds-volume={'rain': 0.94999999999999996, 'storm': 0.81999999999999995, 'wind': 0.71999999999999997, 'waves': 0.029999999999999999, 'stream': 0.58999999999999997, 'birds': 0.089999999999999997, 'summer-night': 0.10000000000000001, 'train': 0.0, 'white-noise': 0.10000000000000001, 'pink-noise': 0.059999999999999998, 'fireplace': 0.11, 'coffee-shop': 0.080000000000000002, 'city': 0.070000000000000007, 'boat': 0.28000000000000003}
 
 [io/bassi/Amberol]
 background-play=false
@@ -130,7 +130,7 @@ show-battery-percentage=false
 text-scaling-factor=1.0
 
 [org/gnome/desktop/notifications]
-application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager', 'discord', 'org-gnome-gedit', 'gnome-power-panel']
+application-children=['org-freedesktop-problems-applet', 'org-gnome-settings', 'org-gnome-software', 'org-gnome-nautilus', 'firefox', 'org-inkscape-inkscape', 'org-gnome-terminal', 'org-gnome-texteditor', 'org-gnome-console', 'org-gnome-shell-extensions-gsconnect', 'org-gnome-extensions-desktop', 'com-spotify-client', 'gnome-network-panel', 'org-gnome-eog', 'cachy-browser', 'org-gnome-shell-extensions-gsconnect-preferences', 'kitty', 'com-mattjakeman-extensionmanager', 'discord', 'org-gnome-gedit', 'gnome-power-panel', 'webcord']
 
 [org/gnome/desktop/notifications/application/cachy-browser]
 application-id='cachy-browser.desktop'
@@ -200,6 +200,9 @@ application-id='org.inkscape.Inkscape.desktop'
 
 [org/gnome/desktop/notifications/application/variety]
 application-id='variety.desktop'
+
+[org/gnome/desktop/notifications/application/webcord]
+application-id='webcord.desktop'
 
 [org/gnome/desktop/notifications/application/wine-programs-riot-games-riot-client]
 application-id='wine-Programs-Riot Games-Riot Client.desktop'
@@ -463,8 +466,8 @@ app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>,
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
-disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'openweather-extension@jenslody.de', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com']
+disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'openweather-extension@jenslody.de']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech']
 favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
@@ -836,7 +839,8 @@ window-toggle-float=['<Super>c']
 workspace-active-tile-toggle=['<Shift><Super>w']
 
 [org/gnome/shell/extensions/gnome-ui-tune]
-hide-search=false
+hide-search=true
+increase-thumbnails-size='200%'
 
 [org/gnome/shell/extensions/gsconnect]
 devices=['22b8d08e_a56e_4367_9e0a_9362172c1e7e']
