--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -12,17 +12,99 @@ style-variant='use-default'
 
 [com/rafaelmardojai/Blanket]
 playing=false
-scroll-position=212.31609994054119
+scroll-position=0.0
 volume=1.0
 
 [com/rafaelmardojai/Blanket/e52f7134-cff9-463b-9f7d-3740d2cc1d57]
-sounds-mute={'rain': false, 'storm': false, 'wind': true, 'waves': false, 'stream': false, 'birds': false, 'summer-night': false, 'train': false, 'white-noise': false, 'pink-noise': false, 'fireplace': false, 'coffee-shop': false, 'city': false, 'boat': false}
-sounds-volume={'rain': 0.94999999999999996, 'storm': 0.81999999999999995, 'wind': 0.71999999999999997, 'waves': 0.029999999999999999, 'stream': 0.58999999999999997, 'birds': 0.089999999999999997, 'summer-night': 0.10000000000000001, 'train': 0.0, 'white-noise': 0.10000000000000001, 'pink-noise': 0.059999999999999998, 'fireplace': 0.11, 'coffee-shop': 0.080000000000000002, 'city': 0.070000000000000007, 'boat': 0.28000000000000003}
+sounds-mute={'rain': false, 'storm': false, 'wind': false, 'waves': false, 'stream': false, 'birds': false, 'summer-night': false, 'train': false, 'white-noise': false, 'pink-noise': false, 'fireplace': false, 'coffee-shop': false, 'city': false, 'boat': false}
+sounds-volume={'rain': 0.0, 'storm': 0.0, 'wind': 0.0, 'waves': 0.0, 'stream': 0.0, 'birds': 0.0, 'summer-night': 0.0, 'train': 0.0, 'white-noise': 0.0, 'pink-noise': 0.0, 'fireplace': 0.0, 'coffee-shop': 0.0, 'city': 0.070000000000000007, 'boat': 0.0}
 
 [io/bassi/Amberol]
 background-play=false
 window-height=661
 window-width=600
+
+[io/github/realmazharhussain/GdmSettings]
+donation-dialog-shown=true
+never-applied=false
+
+[io/github/realmazharhussain/GdmSettings/accessibility]
+always-show-accessibility-menu=false
+
+[io/github/realmazharhussain/GdmSettings/appearance]
+background-image='/usr/share/backgrounds/gruvbox/cat.jpg'
+background-type='image'
+cursor-theme='Gruvbox_Cursors_Light'
+icon-theme='Gruvbox-plus-icon-MOD'
+
+[io/github/realmazharhussain/GdmSettings/fonts]
+antialiasing='grayscale'
+font='Sans 10'
+hinting='slight'
+scaling-factor=1.0
+
+[io/github/realmazharhussain/GdmSettings/misc]
+disable-restart-buttons=false
+disable-user-list=false
+enable-logo=false
+enable-welcome-message=false
+logo=''
+welcome-message=''
+
+[io/github/realmazharhussain/GdmSettings/mouse]
+natural-scrolling=false
+pointer-acceleration='flat'
+speed=0.0
+
+[io/github/realmazharhussain/GdmSettings/night-light]
+enabled=false
+end-hour=6
+end-minute=0
+schedule-automatic=true
+start-hour=20
+start-minute=0
+temperature=uint32 4700
+
+[io/github/realmazharhussain/GdmSettings/pointing]
+cursor-size=24
+
+[io/github/realmazharhussain/GdmSettings/power]
+auto-power-saver=true
+blank-screen=true
+dim-screen=true
+idle-delay=5.0
+power-button-action='suspend'
+suspend-on-ac=true
+suspend-on-ac-delay=15.0
+suspend-on-battery=true
+suspend-on-battery-delay=15.0
+
+[io/github/realmazharhussain/GdmSettings/sound]
+event-sounds=true
+feedback-sounds=false
+over-amplification=false
+theme='freedesktop'
+
+[io/github/realmazharhussain/GdmSettings/top-bar]
+change-text-color=false
+disable-arrows=true
+show-battery-percentage=false
+show-seconds=false
+show-weekday=true
+text-color='rgb(205,171,143)'
+time-format='24h'
+
+[io/github/realmazharhussain/GdmSettings/touchpad]
+disable-while-typing=true
+natural-scrolling=false
+speed=0.0
+tap-to-click=true
+two-finger-scrolling=true
+
+[io/github/realmazharhussain/GdmSettings/window-state]
+height=uint32 613
+last-visited-page='appearance'
+width=uint32 1023
 
 [org/fedoraproject/FirewallConfig]
 show-active-bindings=true
@@ -54,7 +136,7 @@ target-units='radian'
 word-size=64
 
 [org/gnome/control-center]
-last-panel='keyboard'
+last-panel='sound'
 window-state=(1174, 771, false)
 
 [org/gnome/desktop/a11y/magnifier]
@@ -403,7 +485,7 @@ night-light-enabled=false
 night-light-temperature=uint32 4700
 
 [org/gnome/settings-daemon/plugins/media-keys]
-custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8/']
+custom-keybindings=['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom1/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom5/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom6/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom9/', '/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom10/']
 home=@as []
 logout=['<Shift><Super>q']
 next=['AudioNext']
@@ -424,6 +506,11 @@ name='kitty'
 binding='<Shift><Super>Tab'
 command='/usr/bin/minimized-apps'
 name='minimized-apps'
+
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom10]
+binding='<Shift><Super>z'
+command='/home/twilight/.config/hypr/scripts/webcam'
+name='webcam'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom2]
 binding='<Control><Super>c'
@@ -460,13 +547,18 @@ binding='<Control><Super>f'
 command='kitty -1 --hold -e neofetch --kitty /home/twilight/pictures/patrick-bateman-pfp.jpg'
 name='neofetch'
 
+[org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom9]
+binding='<Control><Super>g'
+command='kitty -1 -e glances'
+name='glances'
+
 [org/gnome/shell]
 always-show-log-out=true
-app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'org.gnome.Nautilus.desktop': <{'position': <1>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <2>}>, 'lstopo.desktop': <{'position': <3>}>, 'webcord.desktop': <{'position': <4>}>, 'org.gnome.Meld.desktop': <{'position': <5>}>, 'gnome-nettool.desktop': <{'position': <6>}>, 'logseq-desktop.desktop': <{'position': <7>}>, 'org.gnome.Settings.desktop': <{'position': <8>}>, 'org.gnome.Usage.desktop': <{'position': <9>}>, 'org.gnome.PowerStats.desktop': <{'position': <10>}>, 'org.gnome.tweaks.desktop': <{'position': <11>}>}]
+app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <1>}>, 'lstopo.desktop': <{'position': <2>}>, 'webcord.desktop': <{'position': <3>}>, 'org.gnome.Meld.desktop': <{'position': <4>}>, 'gnome-nettool.desktop': <{'position': <5>}>, 'io.github.realmazharhussain.GdmSettings.desktop': <{'position': <6>}>, 'logseq-desktop.desktop': <{'position': <7>}>, 'org.gnome.Settings.desktop': <{'position': <8>}>, 'org.gnome.Usage.desktop': <{'position': <9>}>, 'org.gnome.PowerStats.desktop': <{'position': <10>}>, 'org.gnome.tweaks.desktop': <{'position': <11>}>}]
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
-disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'openweather-extension@jenslody.de']
+disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'openweather-extension@jenslody.de', 'time-awareness@gnome-extensions.kapranoff.ru']
 enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech']
 favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
@@ -671,8 +763,11 @@ style-components=1
 unblur-in-overview=false
 
 [org/gnome/shell/extensions/caffeine]
-countdown-timer=15
-indicator-position-max=1
+countdown-timer=30
+indicator-position-max=2
+toggle-shortcut=['<Shift><Super>c']
+toggle-state=false
+user-enabled=false
 
 [org/gnome/shell/extensions/clipboard-indicator]
 clear-history=['<Shift><Super>v']
@@ -1124,7 +1219,7 @@ sort-directories-first=true
 
 [org/gtk/gtk4/settings/color-chooser]
 custom-colors=[(0.10588235408067703, 0.11764705926179886, 0.12156862765550613, 1.0), (0.14901961386203766, 0.14509804546833038, 0.14509804546833038, 1.0)]
-selected-color=(true, 0.10588235408067703, 0.11764705926179886, 0.12156862765550613, 1.0)
+selected-color=(true, 0.80392158031463623, 0.67058825492858887, 0.56078433990478516, 1.0)
 
 [org/gtk/gtk4/settings/file-chooser]
 date-format='regular'
