--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -574,7 +574,7 @@ name='tty-clock'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom7]
 binding='<Control><Super>p'
-command='kitty -1 --hold -e pipes.sh'
+command='kitty -1 -e pipes.sh'
 name='pipes'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom8]
