--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -554,7 +554,7 @@ name='cava'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom3]
 binding='<Control><Super>comma'
-command='kitty -1 -e cmatrix -a'
+command='kitty -1 -e cmatrix -a -M twilight -C yellow'
 name='cmatrix'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom4]
