--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -805,7 +805,7 @@ unblur-in-overview=false
 
 [org/gnome/shell/extensions/caffeine]
 countdown-timer=30
-indicator-position-max=1
+indicator-position-max=2
 toggle-shortcut=['<Shift><Super>c']
 
 [org/gnome/shell/extensions/clipboard-indicator]
@@ -1208,6 +1208,7 @@ hide-zeros=true
 hot-sensors=['_memory_usage_', '_system_load_1m_', '_processor_core_0_', '__network-rx_max__']
 position-in-panel=2
 show-battery=true
+show-system=false
 show-temperature=true
 show-voltage=true
 use-higher-precision=true
