--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -432,11 +432,12 @@ delay=0
 include-pointer=false
 
 [org/gnome/gnome-system-monitor]
+current-tab='processes'
 maximized=false
 network-total-in-bits=false
 show-dependencies=false
 show-whose-processes='user'
-window-state=(831, 725, 30, 26)
+window-state=(831, 725, 104, 104)
 
 [org/gnome/gnome-system-monitor/disktreenew]
 col-6-visible=true
@@ -534,7 +535,7 @@ name='gnome usage'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom15]
 binding='<Shift><Control><Super>u'
-command='kitty -1 -e /bin/sh -c "sudo pacman -Syu ; echo Done - Press enter to exit; read _" '
+command='kitty -1 -e /bin/sh -c "sudo pacman --noconfirm -Syu ; echo Done - Press enter to exit; read _" '
 name='update system'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom16]
