--- a/dconf-settings/gnome-setting.ini
+++ b/dconf-settings/gnome-setting.ini
@@ -137,7 +137,7 @@ word-size=64
 
 [org/gnome/control-center]
 last-panel='keyboard'
-window-state=(1174, 771, false)
+window-state=(954, 774, false)
 
 [org/gnome/desktop/a11y/magnifier]
 mag-factor=1.0
@@ -146,7 +146,7 @@ mag-factor=1.0
 folder-children=['YaST', '4f30ef93-ae2e-4d81-8628-5dd4255b7b9e']
 
 [org/gnome/desktop/app-folders/folders/4f30ef93-ae2e-4d81-8628-5dd4255b7b9e]
-apps=['qvidcap.desktop', 'qv4l2.desktop', 'mpv.desktop', 'org.pwmt.zathura.desktop', 'firewall-config.desktop', 'xterm.desktop', 'conky.desktop', 'nnn.desktop', 'uxterm.desktop', 'avahi-discover.desktop', 'bvnc.desktop', 'bssh.desktop', 'nvim.desktop', 'org.gnome.Extensions.desktop']
+apps=['qvidcap.desktop', 'qv4l2.desktop', 'mpv.desktop', 'org.pwmt.zathura.desktop', 'firewall-config.desktop', 'xterm.desktop', 'conky.desktop', 'nnn.desktop', 'uxterm.desktop', 'avahi-discover.desktop', 'bvnc.desktop', 'bssh.desktop', 'nvim.desktop', 'org.gnome.Extensions.desktop', 'btop.desktop', 'emacs.desktop']
 name='not GUI'
 translate=false
 
@@ -584,19 +584,19 @@ command='kitty -1 --hold -e neofetch --kitty /home/twilight/pictures/patrick-bat
 name='neofetch'
 
 [org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom9]
-binding='<Control><Super>g'
-command='kitty -1 -e glances'
-name='glances'
+binding='<Control><Super>Escape'
+command='kitty -1 -e btop'
+name='btop'
 
 [org/gnome/shell]
 always-show-log-out=true
-app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <1>}>, 'lstopo.desktop': <{'position': <2>}>, 'webcord.desktop': <{'position': <3>}>, 'org.gnome.Meld.desktop': <{'position': <4>}>, 'gnome-nettool.desktop': <{'position': <5>}>, 'logseq-desktop.desktop': <{'position': <6>}>, 'org.gnome.Settings.desktop': <{'position': <7>}>, 'org.gnome.Usage.desktop': <{'position': <8>}>, 'org.gnome.PowerStats.desktop': <{'position': <9>}>, 'org.gnome.tweaks.desktop': <{'position': <10>}>}]
+app-picker-layout=[{'4f30ef93-ae2e-4d81-8628-5dd4255b7b9e': <{'position': <0>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <1>}>, 'lstopo.desktop': <{'position': <2>}>, 'webcord.desktop': <{'position': <3>}>, 'org.gnome.Meld.desktop': <{'position': <4>}>, 'gnome-nettool.desktop': <{'position': <5>}>, 'gnome-system-monitor.desktop': <{'position': <6>}>, 'org.gnome.Settings.desktop': <{'position': <7>}>, 'org.gnome.Usage.desktop': <{'position': <8>}>, 'org.gnome.PowerStats.desktop': <{'position': <9>}>, 'org.gnome.tweaks.desktop': <{'position': <10>}>, 'io.github.realmazharhussain.GdmSettings.desktop': <{'position': <11>}>, 'net.lutris.Lutris.desktop': <{'position': <12>}>}]
 command-history=['gnome-screenshot --delay=5', 'ls', 'r', 'gnome-restart']
 disable-extension-version-validation=true
 disable-user-extensions=false
 disabled-extensions=['just-another-search-bar@xelad0m', 'azclock@azclock.gitlab.com', 'rounded-window-corners@yilozt', 'search-light@icedman.github.com', 'tophat@fflewddur.github.io', 'background-logo@fedorahosted.org', 'dock-from-dash@fthx', 'forge@jmmaranan.com', 'show-desktop-button@amivaleo', 'alternate-tab@gnome-shell-extensions.gcampax.github.com', 'time-awareness@gnome-extensions.kapranoff.ru']
-enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech', 'arch-update@RaphaelRochet', 'openweather-extension@jenslody.de']
-favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'logseq-desktop.desktop', 'com.rafaelmardojai.Blanket.desktop']
+enabled-extensions=['user-theme@gnome-shell-extensions.gcampax.github.com', 'arcmenu@arcmenu.com', 'just-perfection-desktop@just-perfection', 'dash-to-panel@jderose9.github.com', 'gsconnect@andyholmes.github.io', 'appindicatorsupport@rgcjonas.gmail.com', 'Vitals@CoreCoding.com', 'quick-settings-tweaks@qwreey', 'space-bar@luchrioh', 'quick-settings-avatar@d-go', 'widgets@aylur', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com', 'gamemode@christian.kellner.me', 'caffeine@patapon.info', 'impatience@gfxmonk.net', 'clipboard-indicator@tudmotu.com', 'Hide_Activities@shay.shayel.org', 'mediacontrols@cliffniff.github.com', 'window-calls@domandoman.xyz', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'blur-my-shell@aunetx', 'focus-changer@heartmire', 'focus-my-window@varianto25.com', 'no-title-bar@franglais125.gmail.com', 'no-title-bar@jonaspoehler.de', 'WinThumbnails@aleksandr.starun.gmail.com', 'dash-to-dock@micxgx.gmail.com', 'gtktitlebar@velitasali.github.io', 'drive-menu@gnome-shell-extensions.gcampax.github.com', 'gnome-ui-tune@itstime.tech', 'arch-update@RaphaelRochet', 'openweather-extension@jenslody.de', 'unblank@sun.wxg@gmail.com']
+favorite-apps=['kitty.desktop', 'cachy-browser.desktop', 'emacsclient.desktop', 'com.rafaelmardojai.Blanket.desktop']
 last-selected-power-profile='performance'
 welcome-dialog-last-shown-version='44.1'
 
